--- a/components.yaml
+++ b/components.yaml
@@ -210,9 +210,8 @@ outputs:
 implementation:
   container:
     image: public.ecr.aws/kubeflow-on-aws/aws-sagemaker-kfp-components:2.3.0
-    command: [python3]
+    command: ["python3", "train.py"]
     args:
-      - train.py
       - --region
       - { inputValue: region }
       ###########################GENERATED SECTION BELOW############################
